Added some logic and improved ui but still a work in progress

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
             <span id="gamename">Rock Paper Scissors</span>
         </div>
         <div>
-            <span id="score">You: 0<br>Computer: 0</span>
+            <span id="score">You: 0<br>Computer: 0<br>Ties: 0</span>
         </div>
         <div>
             <img src="assets/rockemoji.png" id="rock" class="rpsbutton">
             <img src="assets/paperemoji.png" id="paper" class="rpsbutton">
-            <img src="assets/scissorsemoji.png" id="rock" class="rpsbutton">
+            <img src="assets/scissorsemoji.png" id="scissors" class="rpsbutton">
         </div>
         </div>
+        <script src="script.js"></script>
     </body>
 </html>
